--- a/src/components/Popup.css
+++ b/src/components/Popup.css
@@ -27,9 +27,11 @@
 }
 
 .popup__close {
-  position: absolute;
-  top: 8px;
-  right: 8px;
+  position: sticky;
+  top: 0;
+  float: right;
+  margin-top: -24px;
+  margin-right: -20px;
   background: #c0392b;
   color: white;
   border: 2px solid #922b21;
